# imgui.cpm

./: CMakeLists.txt
cmake/: add_cpm_module.cmake
cmake/framegraph/: patch_CMakeLists.txt
examples/: main.cpp
include/: imgui_app.h  imgui_app_fw.h  imgui_app_fw_rendering.h
modules.cpm/: basis_universal.cmake  framegraph.cmake  glfw.cmake  glslang.cmake  imgui.cmake  imgui_app_fw.cmake  libmdbx.cmake  spirv_tools.cmake
modules.cpm/SPIRV_Cross/: CMakeLists.txt
modules.cpm/SPIRV_Headers/: CMakeLists.txt
modules.cpm/SPIRV_Tools/: CMakeLists.txt
modules.cpm/basis_universal/: CMakeLists.txt  patch_CMakeLists.txt
modules.cpm/framegraph/: CMakeLists.txt  patch_VulkanSwapchain.h  patch_extensions_pipeline_compiler_CMakeLists.txt  patch_extensions_scene_CMakeLists.txt  patch_extensions_video_CMakeLists.txt  patch_framegraph_CMakeLists.txt  patch_revision.h
modules.cpm/glfw/: CMakeLists.txt
modules.cpm/glslang/: CMakeLists.txt  patch_CMakeLists.txt
modules.cpm/imgui/: CMakeLists.txt  patch_CMakeLists.txt
modules.cpm/imgui_app_fw/: CMakeLists.txt
modules.cpm/mdbx/: CMakeLists.txt  patch_CMakeLists.txt  patch_mdbx.h++
modules.cpm/python/: CMakeLists.txt
runtime.cpm/: basis_universal.cmake  framegraph.cmake  glfw.cmake  glslang.cmake
runtime.cpm/basis_universal/: CMakeLists.txt
runtime.cpm/framegraph/: CMakeLists.txt  patch_CMakeLists.txt  patch_extensions_framework_CMakeLists.txt  patch_extensions_vulkan_loader_CMakeLists.txt  patch_project_template.cmake.txt  patch_stl_CMakeLists.txt
runtime.cpm/glfw/: CMakeLists.txt
runtime.cpm/glslang/: CMakeLists.txt
src/: imgui_app.cpp  imgui_app_fw.cpp  imgui_app_fw_impl.h  imgui_app_impl.h
src/glfw_vulkan/: ImguiCommon.h  ImguiRenderer.cpp  ImguiRenderer.h  VulkanDevice2.h  main.cpp
src/win32_dx11/: main.cpp
src/win32_dx12/: imgui_impl_dx12.cpp  imgui_impl_dx12.h  main.cpp
toolchain.cpm/: basis_universal.cmake  glslang.cmake  python.cmake  spirv_cross.cmake  spirv_headers.cmake  spirv_tools.cmake
toolchain.cpm/SPIRV_Cross/: CMakeLists.txt
toolchain.cpm/SPIRV_Headers/: CMakeLists.txt
toolchain.cpm/SPIRV_Tools/: CMakeLists.txt
toolchain.cpm/basis_universal/: CMakeLists.txt  patch_basisu.h
toolchain.cpm/glslang/: CMakeLists.txt
toolchain.cpm/python/: CMakeLists.txt
